--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #99dd99;
+    --background: #caffca;
     --foreground: #121212;
   }
 }
@@ -36,6 +36,21 @@
   src: url('/assets/fonts/Saira-VariableFont_wdthwght.ttf') format('truetype');
   font-display: swap;
 }
+
+
+@font-face {
+  font-family: 'Barlow';
+  src: url('/assets/fonts/Barlow-Regular.ttf') format('truetype');
+  font-display: swap;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column; 
+  gap: 0px; 
+  align-items: flex-start;
+}
+
 
 
 body {
@@ -80,6 +95,24 @@ body {
   margin-top: 15px;
   text-align: center;
   text-wrap: inherit;
+}
+
+.text-input {
+  display: block; 
+  margin-bottom: 10px;
+  margin-top: 10px;
+  border-color: black;
+  border-width: 2px;
+  width: 500px;
+  height: 50px;
+  border-radius: 10px;
+  margin-left: 30px;
+  text-align: center;
+  font-family: 'Barlow';
+}
+
+.text-input-label {
+  margin-left: 20px;
 }
 
 .button-about {
